infra/skip.skaffold/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ticketing-srv
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3022
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3020
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3019
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3018
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
